tests/transpiler/x/scala/group_by_sort.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/group_by_sort.scala:5: error: identifier expected but ':' found.
    case class Item(cat: String, val: Int)
                                    ^
/workspace/mochi/tests/transpiler/x/scala/group_by_sort.scala:8: error: Missing closing brace `}' assumed here
    println(grouped)
    ^
/workspace/mochi/tests/transpiler/x/scala/group_by_sort.scala:9: error: ':' expected but '}' found.
  }
  ^
three errors found
